--- a/assets/bibliography/2018-12-22-distill.bib
+++ b/assets/bibliography/2018-12-22-distill.bib
@@ -1,7 +1,36 @@
-@article{gregor2015draw,
-  title={DRAW: A recurrent neural network for image generation},
-  author={Gregor, Karol and Danihelka, Ivo and Graves, Alex and Rezende, Danilo Jimenez and Wierstra, Daan},
-  journal={arXiv preprint, arXiv:1502.04623},
-  year={2015},
-  url={https://arxiv.org/pdf/1502.04623.pdf}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%    Sharp interface limits    %%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@misc{Mellet.Rozowski_2024_VolumepreservingMeancurvatureFlow,
+	title = {Volume-Preserving Mean-Curvature Flow as a Singular Limit of a Diffusion-Aggregation Equation},
+	author = {Mellet, Antoine and Rozowski, Michael},
+	year = {2024},
+	eprint = {2408.14309},
+	primaryclass = {math.AP},
+	publisher = {arXiv},
+	doi = {10.48550/ARXIV.2408.14309},
+	archiveprefix = {arXiv},
+	keywords = {Allen-Cahn,Analysis of PDEs (math.AP),BV solutions,chemotaxis,conditional convergence,diffuse interface approximation,existence of solutions,FOS: Mathematics,Mathematics - Analysis of PDEs,minimizing movement scheme,nonlinear diffusion,sharp interface limit,uniqueness of solutions,volume-preserving mean-curvature flow}
 }
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%    Neural networks    %%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@article{Rozowski.etal_2022_Inputlayerregularization,
+	author = {Rozowski, Michael and Palumbo, Jonathan and Bisen, Jay and Bi, Chuan and Bouhrara, Mustapha and Czaja, Wojciech and Spencer, Richard G.},
+	title = {Input layer regularization for magnetic resonance relaxometry biexponential parameter estimation},
+	journal = {Magnetic Resonance in Chemistry},
+	volume = {60},
+	number = {11},
+	pages = {1076-1086},
+	keywords = {biexponentials, deep learning, MRI, neural network, parameter estimation, regularization, relaxometry},
+	doi = {https://doi.org/10.1002/mrc.5289},
+	url = {https://analyticalsciencejournals.onlinelibrary.wiley.com/doi/abs/10.1002/mrc.5289},
+	eprint = {https://analyticalsciencejournals.onlinelibrary.wiley.com/doi/pdf/10.1002/mrc.5289},
+	abstract = {Abstract Many methods have been developed for estimating the parameters of biexponential decay signals, which arise throughout magnetic resonance relaxometry (MRR) and the physical sciences. This is an intrinsically ill-posed problem so that estimates can depend strongly on noise and underlying parameter values. Regularization has proven to be a remarkably efficient procedure for providing more reliable solutions to ill-posed problems, while, more recently, neural networks have been used for parameter estimation. We re-address the problem of parameter estimation in biexponential models by introducing a novel form of neural network regularization which we call input layer regularization (ILR). Here, inputs to the neural network are composed of a biexponential decay signal augmented by signals constructed from parameters obtained from a regularized nonlinear least-squares estimate of the two decay time constants. We find that ILR results in a reduction in the error of time constant estimates on the order of 15\%–50\% or more, depending on the metric used and signal-to-noise level, with greater improvement seen for the time constant of the more rapidly decaying component. ILR is compatible with existing regularization techniques and should be applicable to a wide range of parameter estimation problems.},
+	year = {2022}
+}
+
