fixed LaTeX in abstract

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,8 +12,8 @@
 	archiveprefix = {arXiv},
 	arxiv = {2408.14309},
 	abstract = {The Patlak-Keller-Segel system of equations (PKS) is a classical example of aggregation-diffusion equation in which the repulsive effect of diffusion is in competition with the attractive chemotaxis term. 
-	Recent work on the {\it Parabolic-Elliptic PKS model} have shown that when the repulsion is modeled by a nonlinear diffusion term $\rho \na \rho^{m-1}$ with $m>2$, this competition leads to phase separation phenomena. Furthermore, in some asymptotic regime corresponding to a large population observed over a long enough time, the interface separating regions of high and low density evolves according to the Hele-Shaw free boundary problem with surface tension. 
-	In the present paper,  we consider the counterpart of that model, namely the {\it Elliptic-Parabolic PKS model} and we prove that the same phase separation phenomena occurs, but the motion of the interface is now described (asymptotically) by a volume-preserving mean-curvature flow.
+	Recent work on the \emph{Parabolic-Elliptic PKS model} have shown that when the repulsion is modeled by a nonlinear diffusion term $\rho \nabla \rho^{m-1}$ with $m>2$, this competition leads to phase separation phenomena. Furthermore, in some asymptotic regime corresponding to a large population observed over a long enough time, the interface separating regions of high and low density evolves according to the Hele-Shaw free boundary problem with surface tension. 
+	In the present paper,  we consider the counterpart of that model, namely the  \emph{Elliptic-Parabolic PKS model} and we prove that the same phase separation phenomena occurs, but the motion of the interface is now described (asymptotically) by a volume-preserving mean-curvature flow.
 	},
 	keywords = {Allen-Cahn,Analysis of PDEs (math.AP),BV solutions,chemotaxis,conditional convergence,diffuse interface approximation,existence of solutions,FOS: Mathematics,Mathematics - Analysis of PDEs,minimizing movement scheme,nonlinear diffusion,sharp interface limit,uniqueness of solutions,volume-preserving mean-curvature flow}
 }
