--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,7 @@
 	doi = {10.48550/ARXIV.2408.14309},
 	archiveprefix = {arXiv},
 	arxiv = {2408.14309},
+	publication_status = {Submitted},
 	abstract = {The Patlak-Keller-Segel system of equations (PKS) is a classical example of aggregation-diffusion equation in which the repulsive effect of diffusion is in competition with the attractive chemotaxis term. 
 	Recent work on the <em>Parabolic-Elliptic PKS model</em> have shown that when the repulsion is modeled by a nonlinear diffusion term \(\rho \nabla \rho^{m-1}\) with \(m>2\), this competition leads to phase separation phenomena. Furthermore, in some asymptotic regime corresponding to a large population observed over a long enough time, the interface separating regions of high and low density evolves according to the Hele-Shaw free boundary problem with surface tension. 
 	In the present paper, we consider the counterpart of that model, namely the  <em>Elliptic-Parabolic PKS model</em> and we prove that the same phase separation phenomena occurs, but the motion of the interface is now described (asymptotically) by a volume-preserving mean-curvature flow.
