--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 %%    Sharp interface limits    %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @misc{Rozowski_2024_HeleShawSurfaceTensionKinetic, 
-	title = {Hele-Shaw Flow with Surface Tension and Kinetic Undercooling as a Sharp Interface Limit of the Fully Parabolic Keller-Segel System with Nonlinear Diffusion,
+	title = {Hele-Shaw Flow with Surface Tension and Kinetic Undercooling as a Sharp Interface Limit of the Fully Parabolic Keller-Segel System with Nonlinear Diffusion},
 	author = {Rozowski, Michael},
 	year = {2024},
 	pubstate = {In Preparation},
