--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,14 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%    Sharp interface limits    %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@unpublished{Rozowski_2024_WellposednessSingularLimitsCongested,
+	title = {Well-posedness of some Congested Models of Chemotaxis and their Singular Limits Toward Free Boundary Problems},
+	author = {Rozowski, Michael},
+	year = {2024},
+	publication_status = {In Preparation},
+}
+
+
 @misc{Rozowski_2024_HeleShawSurfaceTensionKinetic, 
 	title = {Hele-Shaw Flow with Surface Tension and Kinetic Undercooling as a Sharp Interface Limit of the Fully Parabolic Keller-Segel System with Nonlinear Diffusion},
 	author = {Rozowski, Michael},
